# DroneHub-GCS

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  bootstrap.sh  crowdin.yml
.cursor/rules/: flyview-hud.mdc
.github/workflows/: android.yml  build.yml  crowdin.yml  release.yml  translations.yml  wasm.yml
custom/: CMakeLists.txt  custom.qrc
custom/cmake/: CustomOverrides.cmake
custom/patches/: FactMetaData-enum-tr.patch  FlightDisplay-MavlinkActionConfirm.patch  MavlinkAction-confirm.patch  MissionCommand-friendlyName-tr.patch  MissionEditor-font-readability.patch  MissionItemEditor-spacing.patch  PlanView-panel-chrome.patch  PlanView-panel-width.patch  QGCApplication-quit-nullguard.patch  QGCTabButton-fit-text.patch  SensorsSetup-button-width.patch  Toolbar-CustomIndicators.patch  Toolbar-VehicleHealthIndicator.patch  Toolbar-VideoStatusIndicator.patch  Viewer3D-osm-autoload.patch  translations-norwegian-nb_NO.patch
custom/res/Custom/: Theme.qml  qmldir
custom/res/Custom/qml/QGroundControl/Controls/: AppSettings.qml  BatteryIndicator.qml  DropPanel.qml  FlightModeIndicator.qml  FlyViewToolBar.qml  FlyViewToolBarIndicators.qml  GPSIndicator.qml  MissionItemEditor.qml  MissionSettingsEditor.qml  PlanToolBarIndicators.qml  PlanViewToolBar.qml  QGCPopupDialog.qml  SettingsGroupLayout.qml  SimpleItemEditor.qml  SliderSwitch.qml  ToolIndicatorPage.qml  ToolStrip.qml  ToolStripDropPanel.qml  ToolStripHoverButton.qml
custom/res/Custom/qml/QGroundControl/FlightDisplay/: FlightDisplayViewVideo.qml  FlyView.qml  FlyViewAdditionalActionsButton.qml  FlyViewAdditionalActionsPanel.qml  FlyViewCustomLayer.qml  FlyViewToolStripActionList.qml  FlyViewWidgetLayer.qml  GuidedActionConfirm.qml  GuidedActionGripper.qml  MavlinkActionConfirm.qml
custom/res/Custom/qml/QGroundControl/MainWindow/: MainWindow.qml
custom/res/Custom/qml/QGroundControl/Toolbar/: RCRSSIIndicator.qml  VehicleHealthIndicator.qml  VideoStatusIndicator.qml
custom/res/fonts/: PLACE_FONT_HERE.md
custom/res/icons/: macx.icns
custom/res/mavlink-actions/: DroneHub-flyview-actions.json  DroneHub-joystick-actions.json
custom/src/: CustomOptions.cc  CustomOptions.h  CustomOsmAutoLoader.cc  CustomOsmAutoLoader.h  CustomPlugin.cc  CustomPlugin.h
custom/src/geo/: geo_mag_declination.cpp
docs/: OPERATOR_GUIDE_ka.md  RELEASE.md
tools/: CROWDIN.md  README.md  apply-ka-batch2.py  apply-ka-batch3.py  apply-ka-batch4.py  apply-ka-batch5.py  apply-ka-batch6.py  apply-ka-translations.sh  apply-qgc-patches.sh  check-dronehub-stability.sh  check-hud-tokens.py  check-qml-override-drift.py  check-translation-stats.py  check-video-build.sh  connect-checklist.sh  crowdin-setup-secrets.sh  export-field-logs.sh  extract-px4-fact-enums.py  fetch-georgian-font.sh  field-test.sh  install-gstreamer-macos.sh  px4-install-deps.sh  qgc-lupdate.sh  rebuild-dhgcs.sh  run-dhgcs.sh  simulate-mavlink-udp.py  smoke-runtime.sh  start-sitl-session.sh  sync-dhgcs-app.sh
translations/: qgc_ka.ts
